Source/WebCore/bindings/v8/custom/V8DOMWindowCustom.cpp
@@ -521,7 +521,7 @@ v8::Handle<v8::Value> V8DOMWindow::namedPropertyGetter(v8::Local<v8::String> nam
     if (doc && doc->isHTMLDocument()) {
         if (static_cast<HTMLDocument*>(doc)->hasNamedItem(propName.impl()) || doc->hasElementWithId(propName.impl())) {
             HTMLCollection* items = doc->windowNamedItems(propName);
-            if (items->hasAnyItem()) {
+            if (!items->isEmpty()) {
                 if (items->hasExactlyOneItem())
                     return toV8(items->item(0), info.GetIsolate());
                 return toV8(items, info.GetIsolate());
